RESOLVED FIXED218868
[iPad] nhl.com cannot select new video to play while video is playing with desktop UA
https://bugs.webkit.org/show_bug.cgi?id=218868
Summary [iPad] nhl.com cannot select new video to play while video is playing with de...
Devin Rousso
Reported 2020-11-12 12:15:16 PST
.
Attachments
Patch (4.27 KB, patch)
2020-11-13 12:33 PST, Devin Rousso
no flags
Devin Rousso
Comment 1 2020-11-12 12:15:31 PST
Devin Rousso
Comment 2 2020-11-13 12:33:07 PST
EWS
Comment 3 2020-11-16 03:29:03 PST
Committed r269846: <https://trac.webkit.org/changeset/269846> All reviewed patches have been landed. Closing bug and clearing flags on attachment 414080 [details].
Note You need to log in before you can comment on or make changes to this bug.