Source/WebCore/page/Quirks.cpp
@@ -376,8 +376,6 @@ bool Quirks::shouldDispatchSimulatedMouseEvents() const
             return true;
         if (host == "naver.com")
             return true;
-        if (host == "nhl.com" || (host.endsWith(".nhl.com") && !host.startsWith("account.")))
-            return true;
         if (host == "nba.com" || host.endsWith(".nba.com"))
             return true;
         if (host.endsWith(".naver.com")) {
